break lines within code chunks to prevent overflow

--- a/sheet_files/sheets.css
+++ b/sheet_files/sheets.css
@@ -122,6 +122,10 @@ code {
 	padding-right: 0px
 }
 
+code .sourceCode {
+	white-space: break-spaces;
+}
+
 pre.sourceCode {
 	background-color: #fff;
 	overflow-x: auto;
